30 August 2007

* Fixed silly bug in replace.c. Using the base rather than data offset for %0-%9
  so they pointed at the wrong data if a from line had been trimmed. Found by
  Jo Fahlke, reported via Frank Terbeck through a Debian bug report.
* Move command-line macro parsing into parse.y/parse-fn.c and make it actually
  work again. Found by Jo Fahlke, reported via Frank Terbeck.
* account and all tokens are now normal match conditions. So, you can do useless
  stuff like:

	match all and all or all ...

  And, more importantly, matching accounts now CHANGES to require an operator
  and follow the normal left-to-right precedence. So:

	match all account "a*" ...

  Becomes:

	match account "a*" ...

  And:

	match "a regexp" or age > 10 accounts { "acc1" acc2" } ...

  Becomes:

	match accounts { "acc1" "acc2 " } and "a regexp" or age > 10 ...

  fdm 1.4 will emit a warning and convert the old style into the new style, but
  in 1.5 the warning will become an error, and in 1.6 the old code will be
  removed entirely. So update your rulesets!

  Note that due to limitations in yacc, the line number of the rule in the
  warning may be off by a few lines (usually one line too far).

25 August 2007

* Break timer stuff off into timer.c.
* Fix queue-high == 1 to not hang after first mail.

24 August 2007

* Don't even try to check for command child exit until its std{in,out,err} are
  closed. Hopefully fixes problems seen on Linux by Frank Terbeck.
* Be more consistent about lists when parsing configuration file.
* Don't try to strip duplicates from any lists instead of trying for some of
  them and not others.
* remove-header now accepts a list of headers in {}.

23 August 2007

* Yet another fetch reorganisation to try to make it clearer. Move tracking
  completed mail into fetch code, move mail and state stuff outside, and
  simplify the API and data structures. Also change the way the fetch poll loop